# lite6-vr-teleop

./: .gitignore  README.md
src/moveit_1/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_1/config/: UF_ROBOT.ros2_control.xacro  UF_ROBOT.srdf  UF_ROBOT.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml
src/moveit_1/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mylit6/: CMakeLists.txt  package.xml
src/mylit6/config/: display.rviz  lite6_controllers.yaml
src/mylit6/launch/: dinomoveit.launch.py  display.launch.py  gz.launch.py  lite6_vr_gazebo.launch.py  lite6_vr_servo.launch.py
src/mylit6/meshes/gripper/lite/visual/: gripper_litefixed.stl
src/mylit6/src/: quest_bridge.py  vr_servo_input.py
src/mylit6/urdf/: mylite6_with_control.urdf  mylite6test.urdf  mylite6test.urdf.backup  mylite6test_fixed.urdf
src/xarm_moveit_servo/config/: xarm_moveit_servo_config.yaml
