<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mylit6</name>
  <version>0.0.1</version>
  <description>Lite6 robot arm description, MoveIt config, VR servo control</description>
  <maintainer email="dino_davis@todo.todo">dino_davis</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_msgs</depend>
  <depend>xarm_moveit_servo</depend>
  <depend>xarm_moveit_config</depend>
  <depend>xarm_controller</depend>
  <depend>xarm_api</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
